Fix homepage alignment on mobile

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -95,9 +95,9 @@ span:hover {
 
 @media (max-width: 992px) {
 
-  /*body {
-    font-size: x-large;
-  }*/
+  body {
+    font-size: larger;
+  }
 
   .navbar {
     .list {
